<resources>
    <string name="app_name">MetOpt2</string>
    <string name="prev">prev iter</string>
    <string name="next">next iter</string>
    <string name="hideLevel">hide level</string>
    <string name="showLevel">show level</string>
    <string name="hideCoordinateLine">hide coordinate lines</string>
    <string name="showCoordinateLine">show coordinate lines</string>
    <string name="hideAxis">hide axis</string>
    <string name="showAxis">show axis</string>
    <string name="eps">0.001</string>
    <string name="information">
        Данное приложение является дополнительным заданием (графикой) второй лабороторной работы по предмету "Методы оптимизации".
        <p>
        Выполнено студентами M3235 Дзюба Марией, Карасёвой Екатериной и Рындиной Валерией.
        </p>
        Более подробная информация и отчёт: github.com/valrun/MetOpt2 </string>
    <string name="gradientMethod">
        Основная идея заключается в том, чтобы осуществлять оптимизацию в направлении наискорейшего спуска, а это направление задаётся антиградиентом (-grad)</string>
    <string name="fastMethod">
        Из точки  x^{[k]} будем двигаться в направлении антиградиента
        до тех пор пока не достигнем минимума функции f на этом направлении,
        т. е. на луче.
        Метод требует решения на каждом шаге задачи одномерной
        оптимизации, зато на практике часто требует меньшего
        числа операций, чем градиентный метод.</string>
    <string name="conjugateMethod">
     Решает квадратичную задачу оптимизации за конечное число шагов.
     В соответствии с представленными  выражениями новое сопряженное направление
     получается сложением градиента (антиградиента) в точке поворота и предыдущего
     направления движения, умноженного на коэффициент. Таким образом, метод сопряженных
     градиентов формирует направление поиска к оптимальному значению используя
     информацию о поиске полученную на предыдущих этапах спуска. </string>
</resources>