<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameText"
        style="@style/ComplimentTextTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gradient Method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintStart_toEndOf="@+id/prev"
        app:layout_constraintTop_toBottomOf="@+id/graph" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hideLevel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prev" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/coordinateLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hideCoordinateLine"
        app:layout_constraintEnd_toStartOf="@+id/axis"
        app:layout_constraintStart_toEndOf="@+id/level"
        app:layout_constraintTop_toTopOf="@+id/level" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/axis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hideAxis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/level" />

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level" />

    <EditText
        android:id="@+id/epsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/eps"
        app:layout_constraintStart_toEndOf="@+id/setEps"
        app:layout_constraintTop_toTopOf="@+id/prev" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setEps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="set eps:"
        app:layout_constraintStart_toEndOf="@+id/next"
        app:layout_constraintTop_toTopOf="@+id/epsText" />


</androidx.constraintlayout.widget.ConstraintLayout>